# binance-shioaji-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
binance_shioaji_sdk/: __init__.py  account.py  balance.py  client.py  contracts.py  exceptions.py  fill_report.py  funding.py  market_info.py  order.py  position.py  quote.py  trade.py
binance_shioaji_sdk/_internal/: __init__.py  types.py  ws_manager.py
docs/design/: 2026-05-25-v0.4.0-data-structure-mirror.md
docs/plans/: 2026-05-25-v0.4.0-implementation.md
lcz_binance_sdk/: __init__.py  account.py  client.py  contracts.py  market_info.py  order.py  quote.py
lcz_binance_sdk/_internal/: __init__.py  rest_client.py  ws_manager.py
tests/: conftest.py  test_account.py  test_balance.py  test_client.py  test_contracts.py  test_deprecation.py  test_exceptions.py  test_fill_report.py  test_funding.py  test_market_info.py  test_order.py  test_position.py  test_quote.py  test_shioaji_mirror.py  test_trade.py
tests/_internal/: test_rest_client.py  test_ws_manager.py
