[project]
name = "binance-shioaji-sdk"
version = "0.3.0"
description = "Async Python SDK for Binance Futures with shioaji-style API. Drop-in for quants migrating between TW (shioaji) and crypto markets."
authors = [{name = "Li-Cheng Zheng", email = "lczheng.official@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]
# Reflection-based mirror tests need shioaji to introspect the real model fields.
# Optional — tests skip if shioaji not installed. Install: `pip install -e '.[mirror-test]'`.
mirror-test = ["shioaji"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "binance_shioaji_sdk._internal.ws_manager"
disable_error_code = ["misc"]
